import org.jetbrains.kotlin.gradle.tasks.KotlinCompile

plugins {
    id 'com.android.application'
    id 'kotlin-android'
    id 'kotlin-parcelize'
}

android {
    namespace = "com.lurebat.keyboard71"
    compileSdk 33

    defaultConfig {
        applicationId 'com.lurebat.keyboard71'
        minSdkVersion 24
        targetSdkVersion 33
        versionCode 602
        versionName "71.5.0"
        ndk {
            abiFilters "armeabi"
        }

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        debug {
            testCoverageEnabled true
        }

        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            jniDebuggable true
            debuggable true
            renderscriptDebuggable true
        }
    }

    buildFeatures {
        compose true
        buildConfig true
    }

    composeOptions {
        kotlinCompilerExtensionVersion = "1.4.7"
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    lint {
        abortOnError false
    }
    sourceSets {
        main {
            java {
                srcDirs 'src/main/java'
            }
        }
    }
}
tasks.withType(KotlinCompile).configureEach {
    kotlinOptions {
        freeCompilerArgs += [
                "-P",
                "plugin:androidx.compose.compiler.plugins.kotlin:suppressKotlinVersionCompatibilityCheck=1.8.22"
        ]
    }
}

dependencies {
    implementation 'androidx.core:core-ktx:1.10.1'
    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
    implementation 'com.joaomgcd:taskerpluginlibrary:0.4.7'
    implementation 'org.jetbrains:annotations:24.0.1'
    implementation 'androidx.datastore:datastore-preferences-android:1.1.0-alpha04'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
    implementation 'com.github.alorma:compose-settings-ui-m3:0.27.0'
    implementation 'com.github.alorma:compose-settings-storage-datastore:0.27.0'

    implementation platform('androidx.compose:compose-bom:2023.06.01')
    androidTestImplementation platform('androidx.compose:compose-bom:2023.06.01')

    implementation 'androidx.compose.material3:material3'
    // Android Studio Preview support
    implementation 'androidx.compose.ui:ui-tooling-preview'
    debugImplementation 'androidx.compose.ui:ui-tooling'
    implementation 'androidx.activity:activity-compose:1.7.2'
    testImplementation 'org.jetbrains.kotlin:kotlin-test'


}
